tests/golden/monitoring/monitoring/monitoring/monitoring/Backend/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: microgateway-monitoring
  name: microgateway-canary-backend
  namespace: vshn-airlock-monitoring
spec:
  minReadySeconds: 30
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: microgateway-monitoring
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        app: microgateway-monitoring
    spec:
      containers:
        - image: test.io/test/test-unprivileged:10
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: nginx
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
          resources:
            limits:
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 10Mi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-conf
              subPath: default.conf
            - mountPath: /etc/nginx/tls
              name: nginx-tls
              readOnly: true
      imagePullSecrets: []
      initContainers: []
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            name: nginx-conf
          name: nginx-conf
        - name: nginx-tls
          secret:
            secretName: nginx-tls
