tests/golden/monitoring/monitoring/monitoring/monitoring/Backend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: microgateway-canary-backend-svc
  name: microgateway-canary-backend-svc
  namespace: vshn-airlock-monitoring
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
  selector:
    app: microgateway-monitoring
  type: ClusterIP
